--- a/packages/mobile-top-nav/package.json
+++ b/packages/mobile-top-nav/package.json
@@ -42,10 +42,23 @@
     "eslint": "^6.1.0",
     "eslint-plugin-lit": "^0.5.0",
     "gulp": "^4.0.2",
+    "husky": "^4.2.3",
     "lint-staged": "^8.0.0",
     "owc-dev-server": "^0.1.2",
     "sinon": "^9.0.0",
     "webpack-merge": "^4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "extends": [
