--- a/packages/mobile-top-nav/package.json
+++ b/packages/mobile-top-nav/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "module": "index.js",
   "scripts": {
-    "start": "owc-dev-server --open ./index.html",
+    "start": "es-dev-server --app-index ./index.html --node-resolve --watch --open",
     "lint:eslint": "eslint --ext .js . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js . --fix --ignore-path .gitignore",
     "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
@@ -38,13 +38,12 @@
     "@open-wc/testing-karma-bs": "^1.0.0",
     "@storybook/react": "^5.1.11",
     "concurrently": "^4.1.2",
-    "es-dev-server": "^1.5.0",
+    "es-dev-server": "^1.42.0",
     "eslint": "^6.1.0",
     "eslint-plugin-lit": "^0.5.0",
     "gulp": "^4.0.2",
     "husky": "^4.2.3",
     "lint-staged": "^8.0.0",
-    "owc-dev-server": "^0.1.2",
     "sinon": "^9.0.0",
     "webpack-merge": "^4.1.5"
   },
