--- a/packages/ia-activity-indicator/package.json
+++ b/packages/ia-activity-indicator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ia-activity-indicator",
+  "name": "@internetarchive/ia-activity-indicator",
   "version": "0.0.0",
   "description": "Webcomponent ia-activity-indicator following open-wc recommendations",
   "author": "ia-activity-indicator",
