--- a/packages/radio-player/.eslintrc
+++ b/packages/radio-player/.eslintrc
@@ -7,6 +7,14 @@
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
-    }
+    },
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "ts": "never",
+        "js": "always"
+      }
+    ]
   }
 }
