--- a/packages/ia-models/package.json
+++ b/packages/ia-models/package.json
@@ -7,6 +7,7 @@
   "module": "index.js",
   "types": "index.d.ts",
   "files": [
+    "src/**/*",
     "lib/**/*",
     "index.d.ts",
     "index.js"
@@ -15,8 +16,7 @@
     "prepare": "npm run build",
     "build": "tsc -p tsconfig.build.json",
     "watch": "tsc --watch",
-    "devserver": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
-    "start": "concurrently \"npm run watch\" \"npm run devserver\"",
+    "start": "npm run:watch",
     "start:compatibility": "concurrently \"tsc --watch\" \"es-dev-server --app-index demo/index.html --node-resolve --open --watch --compatibility all\"",
     "lint:eslint": "eslint --ext .ts . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .ts . --fix --ignore-path .gitignore",
@@ -30,24 +30,18 @@
     "test:prune-snapshots": "karma start --prune-snapshots",
     "test:compatibility": "karma start --compatibility all --coverage",
     "test:compatibility:watch": "karma start --compatibility all --auto-watch=true --single-run=false",
-    "test:bs": "karma start karma.bs.config.js --compatibility all --coverage",
-    "site:build": "npm run storybook:build",
-    "storybook": "start-storybook -p 9001",
-    "storybook:build": "build-storybook -o _site -s storybook-static"
+    "test:bs": "karma start karma.bs.config.js --compatibility all --coverage"
   },
   "dependencies": {
     "lit-html": "^1.1.2"
   },
   "devDependencies": {
-    "@open-wc/demoing-storybook": "^0.3.0",
     "@open-wc/eslint-config": "^1.0.0",
     "@open-wc/prettier-config": "^0.1.10",
     "@open-wc/testing": "^2.5.4",
     "@open-wc/testing-karma": "^3.0.0",
     "@open-wc/testing-karma-bs": "^1.0.0",
-    "@storybook/react": "^5.1.11",
     "@types/form-data": "^2.5.0",
-    "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "concurrently": "^4.1.2",
