--- a/packages/ia-search-service/package.json
+++ b/packages/ia-search-service/package.json
@@ -24,7 +24,7 @@
     "format:prettier": "prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "format": "npm run format:eslint && npm run format:prettier",
-    "test": "npm run build && karma start --coverage",
+    "test": "npm run build && npm run lint && karma start --coverage",
     "test:watch": "concurrently \"npm run watch\" \"karma start --auto-watch=true --single-run=false --coverage\"",
     "test:update-snapshots": "karma start --update-snapshots",
     "test:prune-snapshots": "karma start --prune-snapshots",
@@ -42,12 +42,12 @@
     "@open-wc/testing-karma": "^3.0.0",
     "@open-wc/testing-karma-bs": "^1.0.0",
     "@types/form-data": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "concurrently": "^4.1.2",
     "deepmerge": "^4.2.2",
     "es-dev-server": "^1.5.0",
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "gulp": "^4.0.2",
     "husky": "^1.0.0",
     "karma-coverage": "^2.0.1",
