--- a/packages/ia-components/package.json
+++ b/packages/ia-components/package.json
@@ -5,7 +5,7 @@
     "license": "AGPL-3.0-only",
     "scripts": {
         "postversion": "node scripts/postversion.js",
-        "storybook": "yarn run test:generate-output && yarn run storybook:start",
+        "storybook": "node bin/copy_bookreader.js && yarn run test:generate-output && yarn run storybook:start",
         "storybook:start": "start-storybook -p 9001 -c .storybook -s ./public",
         "test:generate-output": "mkdir jest-test-utils && jest --json --outputFile=jest-test-utils/jest-test-results.json || true",
         "test:update-snapshots": "jest --updateSnapshot",
